Fix docs on mobile

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -93,6 +93,8 @@ div.document {
 @media screen and (max-width: 600px) {
     div.document {
         width: 100%;
+    }
+    div.body {
         padding-right: 20px;
         padding-left: 20px;
     }
